--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+appdirs==1.4.4
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
 backcall==0.2.0
+black==20.8b1
 bleach==3.2.1
 bokeh==2.2.3
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
+click==7.1.2
+cycler==0.10.0
+dataclasses==0.8
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -18,14 +23,18 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
 Jinja2==2.11.2
+joblib==1.0.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.7.0
 jupyterlab-pygments==0.1.2
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.3.3
 mistune==0.8.4
+mypy-extensions==0.4.3
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
@@ -35,6 +44,7 @@ numpy==1.19.4
 packaging==20.7
 pandocfilters==1.4.3
 parso==0.7.1
+pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
@@ -50,13 +60,19 @@ PyYAML==5.3.1
 pyzmq==20.0.0
 qtconsole==5.0.1
 QtPy==1.9.0
+regex==2020.11.13
 requests==2.25.0
+scikit-learn==0.24.0
+scipy==1.5.4
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.1
 testpath==0.4.4
+threadpoolctl==2.1.0
+toml==0.10.2
 tornado==6.1
 traitlets==4.3.3
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
