--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,26 @@ catalogue==1.0.0
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
+click==7.1.2
+ConfigArgParse==1.2.3
 cymem==2.0.5
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+flasgger==0.9.5
+Flask==1.1.2
+Flask-BasicAuth==0.2.0
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-2.3.0/fr_core_news_sm-2.3.0.tar.gz
+gevent==20.12.1
+geventhttpclient==1.4.4
+greenlet==0.4.17
 idna==2.10
 importlib-metadata==3.1.1
 ipykernel==5.3.4
 ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
 joblib==1.0.0
@@ -28,8 +38,10 @@ jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.7.0
 jupyterlab-pygments==0.1.2
+locust==1.4.1
 MarkupSafe==1.1.1
 mistune==0.8.4
+msgpack==1.0.2
 murmurhash==1.0.5
 nbclient==0.5.1
 nbconvert==6.0.7
@@ -47,6 +59,7 @@ plac==1.1.3
 preshed==3.0.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+psutil==5.8.0
 ptyprocess==0.6.0
 pycparser==2.20
 Pygments==2.7.3
@@ -74,8 +87,12 @@ tqdm==4.55.1
 traitlets==4.3.3
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+waitress==1.4.4
 wasabi==0.8.0
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 zipp==3.4.0
+zope.event==4.5.0
+zope.interface==5.2.0
